--- a/rasa_nlu_setting/alt_requirements/requirements_dev.txt
+++ b/rasa_nlu_setting/alt_requirements/requirements_dev.txt
@@ -1,31 +1,18 @@
-# mitie
-git+https://github.com/mit-nlp/MITIE.git#egg=mitie
-# spacy
-spacy==1.8.2
-# sklearn
-scikit-learn==0.18.1
-scipy==0.19.0
-matplotlib==1.5.3
-# duckling
-duckling==1.7.1
-# sklearn_crfsuite
-sklearn-crfsuite==0.3.5
-# cloudpickle
-cloudpickle==0.2.2
-# test
-python-coveralls==2.9.1
-pytest-pep8==1.0.6
-pytest-services==1.1.14
-pytest-cov==2.5.1
-pytest-twisted==1.5
-pytest==3.0.7
-requests==2.18.1
-treq==17.3.1
-# other
-google-cloud-storage==1.0.0
-# docs
-sphinx-autobuild==0.6.0
-sphinxcontrib-versioning==2.2.1
-nbsphinx==0.2.13
--e git://github.com/RasaHQ/sphinx_rtd_theme.git#egg=sphinx_rtd_theme
--e .
+gevent==1.2.2
+klein==17.10.0
+hyperlink==17.3.1
+boto3==1.5.20
+typing==3.6.2
+future==0.16.0
+six==1.11.0
+jsonschema==2.6.0
+matplotlib==2.1.0
+requests==2.18.4
+tqdm==4.19.5
+numpy==1.14.0
+simplejson==3.13.2
+cloudpickle==0.5.2
+msgpack-python==0.5.4
+packaging==17.1
+pyyaml==3.12
+coloredlogs==9.0
