--- a/rasa_nlu_setting/alt_requirements/requirements_spacy_sklearn.txt
+++ b/rasa_nlu_setting/alt_requirements/requirements_spacy_sklearn.txt
@@ -1,7 +1,9 @@
-# Minimum Instal Requirements
+# Minimum Install Requirements
 -r requirements_bare.txt
 
-spacy==1.8.2
-scikit-learn==0.18.1
+spacy==2.0.0
 scipy==0.19.0
 sklearn-crfsuite==0.3.5
+duckling==1.7.3
+scikit-learn==0.19.1
+tensorflow==1.6.0
